feat(Email): finishing email business
