# routes/api.php
@@ -8,7 +8,7 @@ use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 /*
-|--------------------------------------------------------------------------
+|--------------------------------------------------------------------------a
 | API Routes
 |--------------------------------------------------------------------------
 |
@@ -20,27 +20,26 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('/token', [AuthController::class, 'generateToken']);
 Route::post('/user', [UserController::class, 'store']);
+Route::get('/seller/list/email', [EmailController::class, 'sellersSalesEmail']);
 
 Route::middleware('auth:sanctum')->group(function () {
     // User (Administrador)
-    Route::get('user/{id}', [UserController::class, 'get']);
+    Route::get('/user/{id}', [UserController::class, 'get']);
     Route::post('/logout', [AuthController::class, 'logout']);
 
     // Seller
-    Route::post('seller', [SellerController::class, 'store']);
-    Route::get('seller/list', [SellerController::class, 'list']);
-    Route::get('seller/{id}/sales', [SaleController::class, 'listBySellerId']);
-    Route::get('seller/{id}', [SellerController::class, 'get']);
-    Route::put('seller/{id}', [SellerController::class, 'update']);
-    Route::delete('seller/{id}', [SellerController::class, 'delete']);
-
-    // Email
-    Route::get('email/sellers/sales', [EmailController::class, 'sellerSalesEmail']);
-    Route::get('email/sales', [EmailController::class, 'salesEmail']);
+    Route::post('/seller', [SellerController::class, 'store']);
+    Route::get('/seller/list', [SellerController::class, 'list']);
+    Route::get('/seller/{id}/sales', [SaleController::class, 'listBySellerId']);
+    Route::get('/seller/{id}', [SellerController::class, 'get']);
+    Route::put('/seller/{id}', [SellerController::class, 'update']);
+    Route::delete('/seller/{id}', [SellerController::class, 'delete']);
+    Route::get('/seller/{id}/email', [EmailController::class, 'sellerSalesEmail']);
 
     // Sale
-    Route::post('sale', [SaleController::class, 'store']);
-    Route::get('sale/list', [SaleController::class, 'list']);
-    Route::get('sale/{id}', [SaleController::class, 'get']);
-    Route::delete('sale/{id}', [SaleController::class, 'delete']);
+    Route::post('/sale', [SaleController::class, 'store']);
+    Route::get('/sale/list/email', [EmailController::class, 'allSalesEmail']);
+    Route::get('/sale/list', [SaleController::class, 'list']);
+    Route::get('/sale/{id}', [SaleController::class, 'get']);
+    Route::delete('/sale/{id}', [SaleController::class, 'delete']);
 });
